// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ToggleTokens/multiple render snapshot with Array<object> type options 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center actiontech-toggle-tokens css-inle2o"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label1"
          class="toggle-token-item-label"
          title="label1"
        >
          label1
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label2"
          class="toggle-token-item-label"
          title="label2"
        >
          label2
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label3"
          class="toggle-token-item-label"
          title="label3"
        >
          label3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`test ToggleTokens/multiple render snapshot with Array<object> type options 2`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center actiontech-toggle-tokens css-inle2o"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-primary toggle-token-item toggle-token-item-checked toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label1"
          class="toggle-token-item-label"
          title="label1"
        >
          label1
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label2"
          class="toggle-token-item-label"
          title="label2"
        >
          label2
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label3"
          class="toggle-token-item-label"
          title="label3"
        >
          label3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`test ToggleTokens/multiple render snapshot with Array<object> type options and control 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center actiontech-toggle-tokens css-inle2o"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-primary toggle-token-item toggle-token-item-checked toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label1"
          class="toggle-token-item-label"
          title="label1"
        >
          label1
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-primary toggle-token-item toggle-token-item-checked toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label2"
          class="toggle-token-item-label"
          title="label2"
        >
          label2
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label3"
          class="toggle-token-item-label"
          title="label3"
        >
          label3
        </span>
      </button>
    </div>
  </div>
  value1,value2
</div>
`;

exports[`test ToggleTokens/multiple render snapshot with Array<object> type options and control 2`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center actiontech-toggle-tokens css-inle2o"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label1"
          class="toggle-token-item-label"
          title="label1"
        >
          label1
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label2"
          class="toggle-token-item-label"
          title="label2"
        >
          label2
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label3"
          class="toggle-token-item-label"
          title="label3"
        >
          label3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`test ToggleTokens/multiple should render and interact correctly with Array<string> type options in multiple mode 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center actiontech-toggle-tokens css-inle2o"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-with-checkbox toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="key1"
          class="toggle-token-item-label"
          title="key1"
        >
          key1
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-with-checkbox toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="key2"
          class="toggle-token-item-label"
          title="key2"
        >
          key2
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-with-checkbox toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="key3"
          class="toggle-token-item-label"
          title="key3"
        >
          key3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`test ToggleTokens/single render snapshot with Array<object> type options 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center actiontech-toggle-tokens css-inle2o"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label1"
          class="toggle-token-item-label"
          title="label1"
        >
          label1
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label2"
          class="toggle-token-item-label"
          title="label2"
        >
          label2
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label3"
          class="toggle-token-item-label"
          title="label3"
        >
          label3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`test ToggleTokens/single render snapshot with Array<object> type options 2`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center actiontech-toggle-tokens css-inle2o"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-primary toggle-token-item toggle-token-item-checked toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label1"
          class="toggle-token-item-label"
          title="label1"
        >
          label1
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label2"
          class="toggle-token-item-label"
          title="label2"
        >
          label2
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label3"
          class="toggle-token-item-label"
          title="label3"
        >
          label3
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`test ToggleTokens/single render snapshot with Array<object> type options and control 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center actiontech-toggle-tokens css-inle2o"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label1"
          class="toggle-token-item-label"
          title="label1"
        >
          label1
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label2"
          class="toggle-token-item-label"
          title="label2"
        >
          label2
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-primary toggle-token-item toggle-token-item-checked toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="label3"
          class="toggle-token-item-label"
          title="label3"
        >
          label3
        </span>
      </button>
    </div>
  </div>
  value3
</div>
`;

exports[`test ToggleTokens/single render snapshot with disabled props is equal true 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ant-space ant-space-horizontal ant-space-align-center actiontech-toggle-tokens css-inle2o"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <button
            class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style toggle-token-item-button-disabled basic-button-wrapper css-geipcv"
            disabled=""
            type="button"
          >
            <span
              aria-label="key1"
              class="toggle-token-item-label"
              title="key1"
            >
              key1
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <button
            class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style toggle-token-item-button-disabled basic-button-wrapper css-geipcv"
            disabled=""
            type="button"
          >
            <span
              aria-label="key2"
              class="toggle-token-item-label"
              title="key2"
            >
              key2
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style toggle-token-item-button-disabled basic-button-wrapper css-geipcv"
            disabled=""
            type="button"
          >
            <span
              aria-label="key3"
              class="toggle-token-item-label"
              title="key3"
            >
              key3
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center actiontech-toggle-tokens css-inle2o"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <button
          class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style toggle-token-item-button-disabled basic-button-wrapper css-geipcv"
          disabled=""
          type="button"
        >
          <span
            aria-label="key1"
            class="toggle-token-item-label"
            title="key1"
          >
            key1
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <button
          class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style toggle-token-item-button-disabled basic-button-wrapper css-geipcv"
          disabled=""
          type="button"
        >
          <span
            aria-label="key2"
            class="toggle-token-item-label"
            title="key2"
          >
            key2
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <button
          class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style toggle-token-item-button-disabled basic-button-wrapper css-geipcv"
          disabled=""
          type="button"
        >
          <span
            aria-label="key3"
            class="toggle-token-item-label"
            title="key3"
          >
            key3
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test ToggleTokens/single render snapshot with disabled props is equal true 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ant-space ant-space-horizontal ant-space-align-center actiontech-toggle-tokens css-inle2o"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="toggle-token-item toggle-token-item-no-style toggle-token-item-no-style-disabled"
          >
            <span
              aria-label="label1"
              class="toggle-token-item-label"
              title="label1"
            >
              label1
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="toggle-token-item toggle-token-item-no-style toggle-token-item-no-style-disabled"
          >
            <span
              aria-label="label2"
              class="toggle-token-item-label"
              title="label2"
            >
              label2
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="toggle-token-item toggle-token-item-no-style toggle-token-item-no-style-disabled"
          >
            <span
              aria-label="label3"
              class="toggle-token-item-label"
              title="label3"
            >
              label3
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ant-space ant-space-horizontal ant-space-align-center actiontech-toggle-tokens css-inle2o"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <div
          class="toggle-token-item toggle-token-item-no-style toggle-token-item-no-style-disabled"
        >
          <span
            aria-label="label1"
            class="toggle-token-item-label"
            title="label1"
          >
            label1
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <div
          class="toggle-token-item toggle-token-item-no-style toggle-token-item-no-style-disabled"
        >
          <span
            aria-label="label2"
            class="toggle-token-item-label"
            title="label2"
          >
            label2
          </span>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="toggle-token-item toggle-token-item-no-style toggle-token-item-no-style-disabled"
        >
          <span
            aria-label="label3"
            class="toggle-token-item-label"
            title="label3"
          >
            label3
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test ToggleTokens/single should render and interact correctly with Array<string> type options 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center actiontech-toggle-tokens css-inle2o"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="key1"
          class="toggle-token-item-label"
          title="key1"
        >
          key1
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="key2"
          class="toggle-token-item-label"
          title="key2"
        >
          key2
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-default toggle-token-item toggle-token-item-button-style basic-button-wrapper css-geipcv"
        type="button"
      >
        <span
          aria-label="key3"
          class="toggle-token-item-label"
          title="key3"
        >
          key3
        </span>
      </button>
    </div>
  </div>
</div>
`;
